Add api to get biological records based on id

--- a/bims/templates/bio_records_update.html
+++ b/bims/templates/bio_records_update.html
@@ -43,7 +43,7 @@
     </div>
     </div>
 
-    <script src="{% static 'js/views/map-widget.js' %}"></script>
+    <script src="{% static 'js/map-widget.js' %}"></script>
     <script>
         var geometryType = {
             'POINT': 'Point',
