--- a/bims/templates/bio_records_update.html
+++ b/bims/templates/bio_records_update.html
@@ -15,6 +15,7 @@
 
     <script src="{% static 'js/libs/datepicker/datepicker.js' %}"></script>
     <script src="{% static 'js/libs/datepicker/i18n/datepicker.en.js' %}"></script>
+    <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
 {% endblock %}
 
 {% block body_content %}
