--- a/bims/templates/bio_records_update.html
+++ b/bims/templates/bio_records_update.html
@@ -8,7 +8,9 @@
 
 {% block head %}
     <link href="{% static "css/non_validated_list.css" %}" rel="stylesheet">
+    <link href="{% static "js/libs/ol-layerswitcher/ol3-layerswitcher.css" %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'js/libs/datepicker/datepicker.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script src="{% static 'js/libs/jquery/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/libs/openlayers-4.6.4/ol.js' %}"></script>
@@ -16,6 +18,12 @@
     <script src="{% static 'js/libs/datepicker/datepicker.js' %}"></script>
     <script src="{% static 'js/libs/datepicker/i18n/datepicker.en.js' %}"></script>
     <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
+
+    <script src="{% static "js/libs/ol-layerswitcher/ol-layerswitcher.js" %}"></script>
+    <script>
+        const bingMapKey = '{{ bing_map_key }}';
+        const mapTilerKey = '{{ map_tiler_key }}';
+    </script>
 {% endblock %}
 
 {% block body_content %}
@@ -39,6 +47,7 @@
             </select>
         </div>
         <label class="control-label">Location</label>
+        <p id="coordinates-input-wrapper"><span>Lat: </span><input class="form-control-custom" id="custom-lat" type="text" onchange="updateLocationPoint()"> <span style="margin-left: 20px">Long: </span><input class="form-control-custom" id="custom-long" type="text" onchange="updateLocationPoint()"></p>
         <div id="map" class="map" style="height: 400px; width: 600px; margin-bottom: 50px"></div>
         <input class="form-control btn btn-primary" form="form" type="submit" value="Update" />
     </div>
@@ -79,12 +88,16 @@
                 featureProjection: 'EPSG:3857'
             });
             source.addFeatures(geojson_feature);
+            map.getView().setCenter(ol.proj.transform([geometry_json['coordinates'][0], geometry_json['coordinates'][1]], 'EPSG:4326', 'EPSG:3857'));
+            map.getView().setZoom(10);
+            $('#custom-lat').val(geometry_json['coordinates'][0]);
+            $('#custom-long').val(geometry_json['coordinates'][1]);
 
             $('#id_site').on('change', function () {
                 var location_pk = $(this).val();
                 $.ajax({
                     type: 'GET',
-                    url: '/api/location-site/'+ location_pk +'/',
+                    url: '/api/location-site-detail/?siteId='+ location_pk,
                     success: function (data) {
                         source.clear();
                         var geometry_location = JSON.parse(data['geometry']);
@@ -104,9 +117,19 @@
                             featureProjection: 'EPSG:3857'
                         });
                         source.addFeatures(geojson_feature2);
+                        map.getView().setCenter(ol.proj.transform([geometry_location['coordinates'][0], geometry_location['coordinates'][1]], 'EPSG:4326', 'EPSG:3857'));
+                        map.getView().setZoom(10);
+                        $('#custom-lat').val(geometry_location['coordinates'][0]);
+                        $('#custom-long').val(geometry_location['coordinates'][1]);
                     }
                 })
-            })
+            });
+
+            if($('#type').val() !== 'Point'){
+                $('#coordinates-input-wrapper').hide();
+            }else {
+                $('#coordinates-input-wrapper').show();
+            }
         });
 
         $('#form').on('submit', function () {
@@ -116,6 +139,30 @@
             });
             $('input[name=geometry_type]').val(typeSelect.value);
             $('input[name=geometry]').val(json);
-        })
+        });
+
+        function updateLocationPoint() {
+            source.clear();
+            var lat = parseFloat($('#custom-lat').val());
+            var long = parseFloat($('#custom-long').val());
+            var coordinates = [lat, long];
+            var newGeojsonObject = {
+                'type': 'FeatureCollection',
+                'features': [{
+                  'type': 'Feature',
+                  'geometry': {
+                    'type': 'Point',
+                    'coordinates': coordinates
+                  }
+                }]
+            };
+            var new_geojson_feature = geojson.readFeatures(newGeojsonObject, {
+                dataProjection: 'EPSG:4326',
+                featureProjection: 'EPSG:3857'
+            });
+            source.addFeatures(new_geojson_feature);
+            map.getView().setCenter(ol.proj.transform(coordinates, 'EPSG:4326', 'EPSG:3857'));
+            map.getView().setZoom(10);
+        }
     </script>
 {% endblock %}
