--- a/bims/templates/bio_records_update.html
+++ b/bims/templates/bio_records_update.html
@@ -28,6 +28,7 @@
     <script>
         const bingMapKey = '{{ bing_map_key }}';
         const mapTilerKey = '{{ map_tiler_key }}';
+        const mapSurferKey = '{{ map_surfer_key }}';
     </script>
 {% endblock %}
 
